Development history / change log, please read from bottom up

Version 3.3.7 - xx yyy 2019
Generic changes/fixes
	* make none active measurement visible while history exploring
	* fix wrong naming replacement direction_start
	
Device specific changes/fixes
	* iCharger X6/X8 - adapt parsing algorithm to support FW 207 beta 2
	* iChargerUSB - add scale synchronization cell Ri sum to pack Ri
	
Version 3.3.6 - 12 Mar 2019
Generic changes/fixes
	* use char instead of string const. while string operations for performance reasons
	* update SWT to version 4.9, last version 32 bit versions distributed
		* new SWT Linux libraries prefer to use GTK3 libraries
	* update copyright to 2019
	* update all http URLs to https if possible
	* update jaxb jars and remove disabling of optimization statement
	* remove/reset unnecessary smoothVoltageCurve entry from devices
	* fix visualization of serial port selection 
	* enable curve compare independent of selected measurement unit, but warn about this fact
	* fix Windows Java 11 serial communication add jSerialComm implementation 
	* enable enhanced delta ratio measurement on altitude while supported by selected device
	* fix IllegalParameterException on Linux while initiating main UI
	* remove usb4java jar version numbers to enable update
	* update usb4java to version 1.3.0
	* UsbPortImpl cleanup code, remove unchecked warning, add dump methods
	* add LibUsb library code which is closer to hardware and enable use of productString as additional USB-HID constrain
	* update XSD to enable additional UsbPort productString
	* refine semi automatic detection of scale synchronization reference
	* update Mac OS kernel extensions for SkyRCand Junsi USB-HID hinting kext utility

Device specific changes/fixes
	* Graupner Polaron* - adapt number of transfered bytes to latest specification (Firmware 2.x required)
	* Graupner Ultra Duo Plus - fix missing update while reading battery data using device dialog