@@ -128,7 +128,7 @@
                 <statistics sigma="false" avg="false" max="true" min="true"/>
             </Measurement>
             <Measurement>
-                <name>direction</name>
+                <name>direction_start</name>
                 <symbol></symbol>
                 <unit>°</unit>
                 <statistics sigma="false" avg="true" max="true" min="true"/>
